[package]
name = "Advent-Of-Code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.30", features = [] }
regex = { version = "1.10.2", features = [] }
num = "0.4.1"
matches = { version = "0.1.10", features = [] }
cached = "0.46.1"
parallel-stream = "2.1.3"
async-std = "1.12.0"


[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[[bin]]
name = "day5"
path = "src/day5/main.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[[bin]]
name = "day7"
path = "src/day7/main.rs"

[[bin]]
name = "day8"
path = "src/day8/main.rs"

[[bin]]
name = "day9"
path = "src/day9/main.rs"

[[bin]]
name = "day10"
path = "src/day10/main.rs"

[[bin]]
name = "day11"
path = "src/day11/main.rs"

[[bin]]
name = "day12"
path = "src/day12/main.rs"


#[[bin]]
#name = "day2"
#path = "src/day2/day2.rs"
